Fix menu button and also change the position of container in listing page on mobile version

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11771,6 +11771,7 @@ div ~ :last-child .features3-wrp-layout1 {
   text-transform: uppercase;
   font-size: 20px;
 }
+
 @media (min-width: 992px) and (max-width: 1199px) {
   .portfolio-layout4 .content-warp .content-box h2 {
     font-size: 18px;
@@ -11784,6 +11785,24 @@ div ~ :last-child .features3-wrp-layout1 {
 @media (max-width: 767px) {
   .portfolio-layout4 .content-warp .content-box h2 {
     font-size: 18px;
+  }
+  .product-listing-page .bg-common-style #filter-scroll {
+    display: flex;
+    flex-direction: column;
+  }
+  .product-listing-page .bg-common-style #filter-scroll .equipments-onlisting-page {
+    order: 3;
+  }
+  .product-listing-page .bg-common-style #filter-scroll .filter-listing-block {
+    display: flex;
+    flex-direction: column;
+  }
+  .product-listing-page .bg-common-style #filter-scroll .filter-listing-block .listing-content {
+    order: 1;
+  }
+  .product-listing-page .filter-listing-block .filters-block {
+    border-radius: 4px;
+    order: 2;
   }
 }
 .portfolio-layout4 .content-warp .content-box h2 a {
@@ -13670,7 +13689,7 @@ form.left-side-filterseach .ant-form-item-control-wrapper span.ant-form-item-chi
     height: 2px;
     background-color: #fff;
     width: 22px;
-    top: -9px;
+    top: -14px;
     left: -11px;
     right: 0;
     margin: 0 auto;
@@ -13682,8 +13701,20 @@ form.left-side-filterseach .ant-form-item-control-wrapper span.ant-form-item-chi
     height: 2px;
     background-color: #fff;
     width: 22px;
-    top: -2px;
+    top: -6px;
     left: -11px;
+    right: 0;
+    margin: 0 auto;
+    padding: 1px;
+  }
+  header .mobilemenu .ant-btn-primary:after {
+    content: '';
+    position: absolute;
+    height: 2px;
+    background-color: #fff;
+    width: 22px;
+    top: 23px;
+    left: -1px;
     right: 0;
     margin: 0 auto;
     padding: 1px;
@@ -13725,7 +13756,9 @@ form.left-side-filterseach .ant-form-item-control-wrapper span.ant-form-item-chi
     width: 135px;
   }
   .product-listing-page .for-product-deatil.col-md-3 {
-    width: 100%;
+    width: 70%;
+    float: none;
+    margin: 0 auto;
   }
   .headermenu nav button {
     position: absolute;
@@ -13779,7 +13812,7 @@ form.left-side-filterseach .ant-form-item-control-wrapper span.ant-form-item-chi
     width: 80%;
   }
   .product-listing-page .bg-common-style {
-    padding-top: 131px;
+    padding-top: 34px;
   }
   .product-listing-page .filter-listing-block .listing-content {
     width: 100%;
@@ -13975,7 +14008,9 @@ form.left-side-filterseach .ant-form-item-control-wrapper span.ant-form-item-chi
     width: 135px;
   }
   .product-listing-page .for-product-deatil.col-md-3 {
-    width: 100%;
+    width: 67%;
+    float: none;
+    margin: 0 auto;
   }
   #welcome-section-fluid {
     display: flex;
